[package]
name = "turret_mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.2.1", features = ["schemars", "transport-io"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
anyhow = "1.0.97"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
serialport = "4.3.0"